parsing calendar file works

--- a/templates/base_signup.html
+++ b/templates/base_signup.html
@@ -7,8 +7,9 @@
 {% block content %}
 <p>welcome!</p>
 
-<form method='POST'>
-    {{signupForm.as_p}}
+<form method='post'>
+    {% csrf_token %}
+    {{ signupForm.as_p }}
     <input type='submit' name='signup' value='connect your calendar'>
 </form>
 
