--- a/templates/base_events.html
+++ b/templates/base_events.html
@@ -11,6 +11,10 @@
 <p>{{event.name}} - {{event.start|date:"D d M Y - H:i"}}<br>at {{event.location}}</p>
 {% endfor %}
 
+<p>your new events</p>
+
+<pre>{{ cal_display }}</pre>
+
 {% endblock %}
 
 
