ownload should be sorted

--- a/templates/base_journeys.html
+++ b/templates/base_journeys.html
@@ -16,7 +16,7 @@
     {% endfor %}
 
     {% if calfilename %}
-    <a href="/media/{{calfilename}}">download your ics file!</a>
+    <a href="/download/cal/{{calfilename}}">download your ics file!</a>
     {% endif %}
 
 {% endif %}
