--- a/templates/base_events.html
+++ b/templates/base_events.html
@@ -14,8 +14,8 @@
         <p><input type="checkbox" name="cb_{{forloop.counter}}"></input>{{event.name}} - {{event.start|date:"D d M Y - H:i"}}<br>at {{event.location}}</p>
     {% endfor %}
 
-    <input type='hidden' name='origin' value='{{origin}}'>
-    <input type='hidden' name='events' value='{{events}}'>
+    <p>send by email?</p>
+    <p><input type="checkbox" name="email"></input><input type="text" name="email_address"></input></p>
 
     <input type='submit' name='plan' value="plan your journey!">
 </form>
