xml parsing should be sorted

--- a/templates/base_email_response.html
+++ b/templates/base_email_response.html
@@ -20,8 +20,11 @@
 
     {% endif %}
 
-    {{ message }}
+    <p>{{ message }}</p>
 
+    <p>{{ data.remaining}} emails left on the server</p>
+
+    
 {% endblock %}
 
 
